@@ -1,3 +1,7 @@
+2016-12-06  Stipe Tolj  <stolj at kannel.org>
+    * doc/userguide/userguide.xml: indicate the terminus SSMPP for secure SMPP.
+    * gw/smsc/smsc_smpp.c: indicate 'SSMPP' for secure SMPP connections.
+    
 2016-11-14 Alexander Malysh <amalysh at kannel.org>
     * gw/smsbox.c, gw/smsc/smsc_cimd2.c, gw/smsc/smsc_smpp.c: applied patch to support
       DLR_EXPIRED. Thanks to Iwan Iwanowicz <iwan41 at gmail.com> for the patch.
